data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_469.wast
;; 10. **Deferred Unreachable via Block Exit in Loop**:     - **Description**: Implement a loop encapsulating a block where a `br` from within the block leads to an unreachable at the loop’s end.     - **Constraint Checked**: Tests the handling of block exits leading to unreachable instructions within loop constructs.     - **Unreachable Execution Check**: Ensures deferred unreachable instructions at block exits within loops correctly cause traps.

(assert_invalid
  (module
    (func
      (loop
        (block
          (br 0)
        )
        (unreachable)
      )
    )
  )
  "deferred unreachable in loop"
)